# 2021_AOC

./: pyproject.toml
01/: solution.py
02/: solution.py  test_day02.py
03/: solution.py  test_day03.py
04/: solution.py  test_day04.py
05/: solution.py  test_day05.py
06/: solution.py  test_day06.py
07/: solution.py  test_day07.py
08/: solution.py  test_day08.py
09/: solution.py  test_day09.py
10/: solution.py  test_day10.py
11/: solution.py  test_day11.py
12/: solution.py  test_day12.py
13/: solution.py  test_day13.py
14/: solution.py  test_day14.py
15/: solution.py  test_day15.py
16/: solution.py  test_day16.py
17/: solution.py  test_day17.py
18/: solution.py  test_day18.py
19/: solution.py  test_day19.py
20/: solution.py  test_day20.py
21/: solution.py  test_day21.py
22/: solution.py  test_day22.py  test_input_3.txt  test_input_4.txt
23/: input_m.txt  solution.py  test_day23.py
24/: README.md  input_commented.txt  solution.py  solution_str.py  solved.py  test_day24.py  tinker.py
25/: solution.py  test_day25.py
utils/: data.py  directions.py  path.py  vector.py
